--- a/myappproject/local.properties
+++ b/myappproject/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 26 14:00:35 CST 2018
-ndk.dir=D\:\\sdk\\ndk-bundle
-sdk.dir=D\:\\sdk
+#Tue Feb 27 19:54:24 CST 2018
+sdk.dir=D\:\\android_sdk
